# Captum-Industries

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.txt
Resources/shader_outside/: phong_vertex_shader.txt  raycast_vertex_shader.txt
Testdata/GitTrackedData/: s0_nr300_traj.txt  s1_nr300_traj.txt  s2_nr300_traj.txt  s3_nr300_traj.txt  s4_nr300_traj.txt  s5_nr300_traj.txt  testconfig.txt
doc/: Open3DChanges.txt
exe/: o3drecon.cpp  realDeal.cpp  recorder.cpp  tests.cpp  tryouts.cpp
src/: GlobalDefines.h  Oldcode.txt  cmakedefines.h.in  configvars.cpp  configvars.h  frustum.cpp  frustum.h  genCors.cpp  genCors.h  genKps.cpp  genKps.h  integrate.cpp  integrate.h  match.cpp  match.h  nllsFunctors.h  pch.h  ptimer.cpp  ptimer.h  readconfig.cpp  readconfig.h
src/GPUSolver/: CUDASolver.cpp  CUDASolver.h  ICPUtil.h  LieDerivUtil.h  Solver.cu  SolverEquations.h  SolverEquationsLie.h  SolverParameters.h  SolverState.h  SolverUtil.h  cudaUtil.h  moreUtil.h  solverWrapper.cpp  solverWrapper.h  solverthread.cpp  solverthread.h
src/GPUSolver/cutil/: cutil_inline.h
src/Gui/: PandiaView.cpp  PandiaView.h  Shader.h  geometry.cpp  geometry.h  guiutil.cpp  guiutil.h  guiwindow.cpp  guiwindow.h  meshing.cpp  meshing.h
src/Tests/: LiveTest.cpp  LiveTest.h  frustumTest.cpp  trajectory.cpp  trajectory.h
src/cameras/: CameraKinect.cpp  CameraKinect.h  CameraRealsense.cpp  CameraRealsense.h  CameraStructure.cpp  CameraStructure.h  CameraThreadandInit.cpp  CameraThreadandInit.h  DataCam.cpp  DataCam.h
src/cameras/ClientCamera/: clientCamera.cpp  clientCamera.h  compressutil.cpp  compressutil.h
src/core/: Chunk.cpp  Chunk.h  Frame.cpp  Frame.h  KeypointUnit.cpp  KeypointUnit.h  Model.cpp  Model.h  Optimizable.h  reconrun.cpp  reconrun.h  threadvars.cpp  threadvars.h
src/filters/: kabsch.cpp  kabsch.h  kabschfilter.cpp  kabschfilter.h  reprojection.cpp  reprojection.h
src/postprocessing/: postprocessing.cpp  postprocessing.h
src/protos/: framedata.pb.cc  framedata.pb.h  framedata.proto
src/recorder/: recorderConnection.cpp  recorderConnection.h
src/semantics/: LabeledClasses.cpp  LabeledClasses.h  labelutil.cpp  labelutil.h  pythonutil.cpp  pythonutil.h  segmentation.cpp  segmentation.h
src/utils/: coreutil.cpp  coreutil.h  imageutil.cpp  imageutil.h  matrixutil.cpp  matrixutil.h  scannetutil.cpp  scannetutil.h  visutil.cpp  visutil.h
